--- a/my-task-app/app/globals.css
+++ b/my-task-app/app/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.TaskItem{
+  text-allign: center;
+  font-family: Arial;
+
+}
+
+
